# PythonIrbis

./: .gitignore  .pylintrc  Doxyfile  README.md  README.rst  appveyor.yml  azure-pipelines.yml  build.cmd  build_and_test  cov-build.cmd  install.cmd  irbis.py  mypy0  mypy0.cmd  publish.cmd  pylint0  pylint0.cmd  pyproject.toml  setup.py  tests.py
docs/: chapter1.md  chapter1.rst  chapter2.md  chapter2.rst  chapter3.md  chapter3.rst  chapter4.md  chapter4.rst  chapter5.md  chapter5.rst  chapter6.md  chapter6.rst  conf.py  index.rst
examples/: example01.py  example02.py  ftsearch.py  irbis_ping.py  rqst_shrink.py  run.cmd  tksearch.py  wxsearch.py
irbis/: __init__.py  _common.py  abstract.py  alphabet.py  builder.py  connection.py  core.py  database.py  direct.py  error.py  export.py  ext.py  field.py  ini.py  iso2709.py  menus.py  opt.py  par.py  process.py  query.py  record.py  resource.py  response.py  saveable.py  search.py  specification.py  stat.py  stats.py  subfield.py  table.py  terms.py  tree.py  types_.py  user.py  version.py
old_docs/: chapter1.md  chapter2.md  chapter3.md  chapter5.md
playground/: async_socket.py  faster_socket.py
pyirbis/: All.py  ClientQuery.py  FileSpecification.py  IrbisConnection.py  IrbisFormat.py  IrbisVersion.py  MarcRecord.py  ProtocolText.py  RecordField.py  SearchParameters.py  ServerResponse.py  SubField.py  TermInfo.py  TermParameters.py  UserInfo.py  Utility.py  __init__.py  builder.py  common.py  core.py  export.py  ext.py  infrastructure.py  iso2709.py  search.py
ref/: IfpRecord.cs  InvertedFile.cs  IrbisDirectIO.cs  (+2 more)
(+21 files in other folders)
